--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -4,7 +4,7 @@
     <div class="flex flex-col items-center mb-8">
       <div class="mb-4">
         <% if @user.avatar.attached? %>
-          <%= image_tag @user.avatar.variant(resize: "150x150"), class: "w-32 h-32 rounded-full object-cover border-4 border-voidfiles-blue" %>
+          <%= image_tag @user.avatar, class: "w-32 h-32 rounded-full object-cover border-4 border-voidfiles-blue" %>
         <% else %>
           <div class="w-32 h-32 rounded-full bg-gray-200 flex items-center justify-center border-4 border-gray-300">
             <svg class="w-16 h-16 text-gray-400" fill="currentColor" viewBox="0 0 24 24">
